2006-01-11  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/polbase.cpp :
	* lib/polbase.h :
	* main/policy.y :

	  - Renamed add_tc() and close_rel() to add_tctab() and close_tctab().

	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :
	* lib/seqtab.cpp :
	* lib/seqtab.h :
	* lib/stringlist.cpp :
	* lib/stringlist.h :
	* main/agent.y :
	* main/policy.y :

	  - Removed unused and unmaintained debugging code.

	* Makefile.in :
	* configure.ac :
	* rules.mk :
	* lib/Makefile.in :
	* lib/atom.h :
	* lib/config.h.in :
	* lib/consttab.cpp :
	* lib/consttab.h :
	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :
	* lib/identifier.cpp :
	* lib/identifier.h :
	* lib/inttab.cpp :
	* lib/inttab.h :
	* lib/list.cpp :
	* lib/list.h :
	* lib/mapper.cpp :
	* lib/mapper.h :
	* lib/mem.cpp :
	* lib/mem.h :
	* lib/numberlist.cpp :
	* lib/numberlist.h :
	* lib/polbase.cpp :
	* lib/polbase.h :
	* lib/rel.cpp :
	* lib/rel.h :
	* lib/rlist.cpp :
	* lib/rlist.h :
	* lib/seqtab.cpp :
	* lib/seqtab.h :
	* lib/smwrap.cpp :
	* lib/smwrap.h :
	* lib/stringlist.cpp :
	* lib/stringlist.h :
	* lib/stringlistlist.cpp :
	* lib/stringlistlist.h :
	* lib/symtab.cpp :
	* lib/symtab.h :
	* lib/tnet.cpp :
	* lib/tnet.h :
	* lib/updatetab.cpp :
	* lib/updatetab.h :
	* lib/varlist.cpp :
	* lib/varlist.h :
	* lib/vlad.h :
	* lib/wrapper.cpp :
	* lib/wrapper.h :
	* main/Makefile.in :
	* main/agent.l :
	* main/agent.y :
	* main/parser.h :
	* main/policy.l :
	* main/policy.y :
	* main/vlad.cpp :

	  - Added 2006 in copyright notices.

	* lib/polbase.cpp :

	  - Make sure initial facts and query expressions are ground.

	* lib/fact.cpp :
	* lib/fact.h :
	* lib/expression.cpp :
	* lib/expression.h :

	  - Added is_ground() functions.

	* main/agent.l :
	* main/agent.y :
	* main/parser.l :
	* main/parser.y :

	  - Parsers now accepts the new syntax: facts have intervals, the
	    "where" clause, interval definition, temporal constraints